tests/demo1.js
"use strict";
let message1 = "Hello";
//message1 =2; --> error
console.log("message1 : ", message1);
message1 = "bye";
let age1 = 20;
console.log("age1 : ", age1);
let isActive = false;
let digits = [1, 2, 3];
let data = "this could be anything";
data = 42;
function add(a, b) {
    return a + b;
}
add(3, 4);
//OBJECT
let user = { name: "BOB", age: 23 };
//user.location = "India"; //error
